<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/id"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextId"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_toRightOf="@id/textView1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:layout_below="@id/textView1"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/textView1"
        android:layout_toRightOf="@id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/textView2"
        android:layout_marginTop="40dp"
        android:text="@string/phone"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/textView2"
        android:layout_toRightOf="@id/textView1" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/textView3"
        android:layout_marginTop="40dp"
        android:text="@string/street"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextStreet"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/textView3"
        android:layout_toRightOf="@id/textView1" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/textView4"
        android:layout_marginTop="40dp"
        android:text="@string/email"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/textView4"
        android:layout_toRightOf="@id/textView1" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_below="@id/textView5"
        android:layout_marginTop="40dp"
        android:text="@string/country"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:layout_below="@id/textView5"
        android:layout_toRightOf="@id/textView4" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:layout_below="@id/textView6"
        android:layout_centerHorizontal="true"
        android:text="@string/save"
        />
</RelativeLayout>
